# newspaper-scraper

./: .gitignore  Cargo.toml  newspapers-list.json  package-lock.json  package.json
src/: index.js  main.rs  ocr.py
src/apis/: mod.rs  olive-software.js  olive.rs
src/scrapers/: download-pdfs.js  mod.rs  random-downloader.js  random.rs  sequential.rs
