[package]
name = "newspaper-scraper"
version = "0.1.0"
authors = ["duncan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"

